<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Base Datos</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="matricula">Matricula:</string>
    <string name="contrasenya">Contrasenya:</string>
    <string name="entrar">Entrar</string>
    <string name="sortir">Sortir</string>
    <string name="title_activity_log_out">LogOutActivity</string>

</resources>